// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'JSX mapped from object references inc…' > expectation 1`] = `
"//-----------------------------------------------------------------------------| printWidth=80 (in snapshot)
function Foo() {
  return (
    <div>
      {foo?.data.map((_, index) => (
        <div
          key={index}
          className="lorem ipsum dolor sit amet consectetur adipiscing elit proin ex massa hendrerit
            eu posuere eu volutpat id neque pellentesque"
        >
          content
        </div>
      ))}
    </div>
  );
}
"
`;

exports[`'class name inside the \\'if\\' block' > expectation 1`] = `
"//-----------------------------------------------------------------------------| printWidth=80 (in snapshot)
function Foo() {
  let elem;
  if (true) {
    elem = (
      <div
        className="lorem ipsum dolor sit amet consectetur adipiscing elit proin ex massa hendrerit
          eu posuere eu volutpat id neque pellentesque"
      >
        content
      </div>
    );
  }
  return elem;
}
"
`;

exports[`'class name passed as a function argum…' > expectation 1`] = `
"//-----------------------------------------------------------------------------| printWidth=80 (in snapshot)
const Foo = forwardRef(function Foo() {
  return (
    <div
      className="lorem ipsum dolor sit amet consectetur adipiscing elit proin ex massa hendrerit
        eu posuere eu volutpat id neque pellentesque"
    >
      content
    </div>
  );
});
"
`;

exports[`'comment (1) - multi line comment' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
/*
export function Foo({ children }) {
  return (
    <div className="lorem ipsum dolor sit amet consectetur adipiscing elit proin ex massa hendrerit eu posuere">
      {children}
    </div>
  );
}
*/
"
`;

exports[`'comment (2) - single line comment app…' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
// export function Foo({ children }) {
//   return (
//     <div className="lorem ipsum dolor sit amet consectetur adipiscing elit proin ex massa hendrerit eu posuere">
//       {children}
//     </div>
//   );
// }
"
`;

exports[`'endOfLine: crlf' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
export function Foo({ children }) {
  return (
    <div
      className="lorem ipsum dolor sit amet consectetur adipiscing elit proin
        ex massa hendrerit eu posuere"
    >
      {children}
    </div>
  );
}
"
`;

exports[`'plugin options (1) - custom attributes' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
export function Foo({ children }) {
  return (
    <div
      fixme="lorem ipsum dolor sit amet consectetur adipiscing elit proin
        ex massa hendrerit eu posuere"
    >
      {children}
    </div>
  );
}
"
`;

exports[`'plugin options (2) - custom functions' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
export function Foo({ children }) {
  return (
    <div
      className={clsx(
        \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
        ex massa hendrerit eu posuere\`,
      )}
    >
      {children}
    </div>
  );
}
"
`;

exports[`'tabWidth: 4' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
export function Foo({ children }) {
    return (
        <div
            className="lorem ipsum dolor sit amet consectetur adipiscing elit proin
                ex massa hendrerit eu posuere"
        >
            {children}
        </div>
    );
}
"
`;

exports[`'template literal - written as an obje…' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
export function Foo({ children }) {
  return (
    <div
      className={classNames({
        short: "lorem ipsum dolor sit amet",
        near: "lorem ipsum dolor sit amet consectetur adipiscing elit proin",
        long: \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
        ex massa hendrerit eu posuere eu volutpat id neque
        pellentesque\`,
      })}
    >
      {children}
    </div>
  );
}
"
`;

exports[`'useTabs: true (1) - tabWidth: 2' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
export function Foo({ children }) {
	return (
		<div
			className="lorem ipsum dolor sit amet consectetur adipiscing elit proin
				ex massa hendrerit eu posuere"
		>
			{children}
		</div>
	);
}
"
`;

exports[`'useTabs: true (2) - tabWidth: 4' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
export function Foo({ children }) {
	return (
		<div
			className="lorem ipsum dolor sit amet consectetur adipiscing elit proin
				ex massa hendrerit eu posuere"
		>
			{children}
		</div>
	);
}
"
`;

exports[`'useTabs: true (3) - tabWidth: 8' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
export function Foo({ children }) {
	return (
		<div
			className="lorem ipsum dolor sit amet consectetur adipiscing elit proin
				ex massa hendrerit eu posuere"
		>
			{children}
		</div>
	);
}
"
`;
